--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<tr>
 				<td>
 					<div class="sign">
-						<span class="fast-flicker">Tec</span>Hacks<span class="flicker"
+						<span class="fast-flicker">T</span>H<span class="flicker"
 							>&nbsp;&nbsp;&nbsp;3.0</span
 						>
 					</div>
