--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 		<!-- Menu -->
 		<div class="menu-wrapper center-relative">
 			<nav id="header-main-menu">
-				<div class="mob-menu">MENU</div>
+				<div class="mob-menu" style="text-align:right;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+</svg></div>
 				<ul class="main-menu sm sm-clean">
 					<li><a href="#home">Home</a></li>
 					<li><a href="#tracks">Tracks</a></li>
