--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
 			<tr>
 				<td>
 					<div class="sign">
-						<span class="fast-flicker">T</span>H<span class="flicker"
-							>&nbsp;&nbsp;&nbsp;3.0</span
-						>
+						<span class="fast-flicker">T</span><span class="flicker">&nbsp;&nbsp;&nbsp;H</span>
 					</div>
 				</td>
 			</tr>
@@ -44,7 +42,7 @@
 		<!-- Menu -->
 		<div class="menu-wrapper center-relative">
 			<nav id="header-main-menu">
-				<div class="mob-menu" style="text-align:right; padding-right: 15px; color:white;" ><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+				<div class="mob-menu" style="text-align:right; padding-right: 15px; color:white;"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
   <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
 </svg></div>
 				<ul class="main-menu sm sm-clean">
@@ -54,7 +52,7 @@
 					<li><a href="#about">About</a></li>
 					<li><a href="#register">Register</a></li>
 					<li><a href="#sponsors">Sponsors</a></li>
-					<li><a href="#faq">Faqs</a></li>
+					<li><a href="#faq">Faq's</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
@@ -153,7 +151,6 @@
 			</div>
 		</div>
 
-		<!-- Portfolio -->
 		<div id="prizes" class="section">
 			<div class="block content-1170 center-relative">
 				<div class="section-title-holder right">
@@ -170,7 +167,7 @@
 						<div class="grid-sizer"></div>
 						<div class="grid-item element-item p_one">
 							<div href="single-portfolio.html">
-								<img src="images/portfolio_item_01.png" alt="" />
+								<img src="images/portfolio_item_01.jpg" alt="" />
 								<div class="portfolio-text-holder"></div>
 							</div>
 						</div>
@@ -423,105 +420,52 @@
 				</div>
 				<div class="clear"></div>
 			</div>
+			</div>
+		</div>
 
-			<div id="sponsors" class="extra-content-full-width">
-				<script>
-					var fwslider1_speed = "500";
-					var fwslider1_auto = "true";
-					var fwslider1_hover = "true";
-					var fwslider1_start = "0";
-					var fwslider1_width = "400";
-					var fwslider1_height = "400";
-					var fwslider1_num = "5";
-				</script>
+			<div id="sponsors" class="section extra-content-full-width">
 				<h1 style="color: white; text-align: center;">
 					Our Sponsors
-				</h1>
-				<div class="fwslider1 fw-image-slider-holder list_carousel relative" style="padding: 10%;">
-					<div class="caroufredsel_wrapper">
-						<ul id="fwslider1" class="fw-image-slider">
-							<li class="fw-slide">
-								<img src="images/sponsors/axure.png" alt="" style="height:40px;"/>
-								<!-- <p class="fw-slide-text">Video Editing</p> -->
-							</li>
-							<li class="fw-slide">
-								<img src="images/sponsors/balasmiq.png" alt="" style="height:50px;"/>
-								<!-- <p class="fw-slide-text">Premium Cleer</p> -->
-							</li>
-							<li class="fw-slide">
-								<img src="images/sponsors/echo-3d.png" alt="" style="height:40px;"/>
-								<!-- <p class="fw-slide-text">For All Displays</p> -->
-							</li>
-							<li class="fw-slide">
-								<img src="images/sponsors/elearnmarkets.png" alt="" style="height:50px;"/>
-								<!-- <p class="fw-slide-text">Right On Time</p> -->
-							</li>
-							<li class="fw-slide">
-								<img src="images/sponsors/f6s.png" alt="" style="height:50px;"/>
-								<!-- <p class="fw-slide-text">Innovative Ideas</p> -->
-							</li>
-							<li class="fw-slide">
-								<img src="images/sponsors/foss-united.png" alt="" style="height:50px;"/>
-								<!-- <p class="fw-slide-text">Perfect Sound</p> -->
-							</li>
-							<li class="fw-slide">
-								<img src="images/sponsors/interview-buddy.png" alt="" style="height:50px;"/>
-								<!-- <p class="fw-slide-text">3D Solution</p> -->
-							</li>
-							<li class="fw-slide">
-								<img src="images/sponsors/gen.xyz.png" alt="" style="height:50px;"/>
-								<!-- <p class="fw-slide-text">3D Solution</p> -->
-							</li>
-							<li class="fw-slide">
-								<img src="images/sponsors/wolfram-language.png" alt="" style="height:50px;"/>
-								<!-- <p class="fw-slide-text">3D Solution</p> -->
-							</li>
-							<li class="fw-slide">
-								<img src="images/sponsors/taskade.png" alt="" style="height:50px;"/>
-								<!-- <p class="fw-slide-text">3D Solution</p> -->
-							</li>
-							<li class="fw-slide">
-								<a href="https://www.stickermule.com/" target="_blank"><img src="images/sponsors/stickermule.png" alt="" style="height:50px;"/></a>
-								<!-- <p class="fw-slide-text">3D Solution</p> -->
-							</li>
-							<li class="fw-slide">
-								<img src="images/sponsors/one-password.png" alt="" style="height:50px;"/>
-								<!-- <p class="fw-slide-text">3D Solution</p> -->
-							</li>
-							<li class="fw-slide">
-								<img src="images/sponsors/redbull.png" alt="" style="height:50px;"/>
-								<!-- <p class="fw-slide-text">3D Solution</p> -->
-							</li>
-							<li class="fw-slide">
-								<img src="images/sponsors/hellenergy.png" alt="" style="height:50px;"/>
-								<!-- <p class="fw-slide-text">3D Solution</p> -->
-							</li>
-							<li class="fw-slide">
-								<img src="images/sponsors/global-cert.png" alt="" style="height:50px;"/>
-								<!-- <p class="fw-slide-text">3D Solution</p> -->
-							</li>
-						</ul>
-					</div>
-					<div class="clear"></div>
-					<div
-						id="fwslider1_fw_image_slide_pager"
-						class="fw_carousel_pagination"
-					></div>
-				</div>
+				</h1><br><br>
+				<div class="block content-1170 center-relative">
+				<div class="patrons">
+					<a href="https://dorahacks.io/"><img src="images/sponsors/dorahacks.png" alt="dorahacks"  style="width: 200px;"></a>
+					<a href="https://redbull.com/"><img src="images/sponsors/redbull.png" alt="redbull" style="width: 200px;"></a>
+					<a href="https://www.wolfram.com/language/"><img src="images/sponsors/wolfram-language.png" alt="wolfram-language" style="width: 200px;"></a>
+					<a href="https://www.taskade.com/"><img src="images/sponsors/taskade.png" alt="taskade" style="width: 200px;"></a>
+				</div><br><br>
+				<div class="patrons">
+					<a href="https://www.hellenergy.com/en/"><img src="images/sponsors/hellenergy.png" alt="hell" style="width: 200px;"></a>
+					<a href="https://www.echo3d.co/"><img src="images/sponsors/echo-3d.png" alt="echo-3d" style="width: 200px;"></a>
+					<a href="https://balsamiq.com/"><img src="images/sponsors/balasmiq.png" alt="balasmiq" style="width: 200px;"></a>
+					<a href="https://fossunited.org/"><img src="images/sponsors/foss-united.png" alt="foss-united" style="width: 200px;"></a>
+				</div><br><br>
+				<div class="patrons">
+					<a href="https://www.axure.com/"><img src="images/sponsors/axure.png" alt="axure" style="width: 200px;"></a>
+					<a href="https://www.elearnmarkets.com/"><img src="images/sponsors/elearnmarkets.png" alt="elearnmarkets" style="width: 200px;"></a>
+					<a href="https://gen.xyz/"><img src="images/sponsors/gen.xyz.png" alt="gen.xyz" style="width: 200px;"></a>
+					<a href="https://1password.com/"><img src="images/sponsors/one-password.png" alt="one-password" style="width: 200px;"></a>
+				</div><br><br>
+				<div class="patrons">
+					<a href="https://www.stickermule.com/"><img src="images/sponsors/stickermule.png" alt="stickermule" style="width: 200px;"></a>
+					<a href="https://interviewbuddy.in/"><img src="images/sponsors/interview-buddy.png" alt="interview-buddy" style="width: 200px;"></a>
+					<a href="http://www.globalcert.cloud"><img src="images/sponsors/global-cert.png" alt="global-cert" style="width: 200px;"></a>
+					<a href="http://www.globalcert.cloud"><img src="images/sponsors/colorlib.png" alt="colorib" style="width: 200px;"></a>
 
-				<a id="fwslider1_fw_next" class="carousel_fw_next" href="#"></a>
-
+					
+				</div><br><br>
 				<div class="clear"></div>
+				<hr>
 				<h1 style="color: white; text-align: center; padding: 5%">
 					Our Patrons
 				</h1>
 				<div class="patrons">
-					<img src="images/sponsors/iei-logo.png" alt="" />
-					<img src="images/sponsors/iete-logo.png" alt="" />
-					<img src="images/sponsors/ebuzz.png" alt="" />
+					<img src="images/sponsors/iei-logo.png" alt="iei-india" />
+					<img src="images/sponsors/iete-logo.png" alt="iete" />
+					<img src="images/sponsors/ebuzz.png" alt="ebuzz-cu" />
+				</div>
 				</div>
 			</div>
-		</div>
 
 		<!-- Skills -->
 
@@ -717,19 +661,10 @@
 		<footer>
 			<div class="footer content-1170 center-relative">
 				<ul>
+					<li><img src="images/cu_logo.png" style="width: 200px;" alt="chitkara" /></li>
 					<li style="color: white">Chitkara University</li>
 					<li style="color: white">
 						Chandigarh-Patiala National Highway, Rajpura, Punjab, 140401
-					</li>
-
-					<hr />
-					<li>
-						<img
-							src="images/logo-primary.png"
-							style="margin-right: 5%"
-							alt=""
-						/>
-						<img src="images/cu_logo.png" style="margin-left: 5%" alt="" />
 					</li>
 					<hr />
 					<li class="social-footer">
