--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<tr>
 				<td>
 					<div class="sign">
-						<span class="fast-flicker">T</span><span class="flicker">&nbsp;&nbsp;&nbsp;H</span>
+						<span class="fast-flicker">T</span><span class="flicker">H</span>
 					</div>
 				</td>
 			</tr>
@@ -358,10 +358,6 @@
 						<div id="register-div" class="one_half">
 							See you on<strong> 27th November 2022</strong> on Discord
 							<div style="font-size: 1rem; padding-top: 10%">
-								If you already have a team of 3 to 5 members, you can register
-								now. If you are an individual hacker looking for a team, please
-								join the discord server and find your team on #find-a-team
-								channel before registering.
 							</div>
 						</div>
 						<style>
