--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 						<div class="grid-sizer"></div>
 						<div class="grid-item element-item p_one">
 							<div href="single-portfolio.html">
-								<img src="images/portfolio_item_01.jpg" alt="" />
+								<img src="images/portfolio_item_01.png" alt="" />
 								<div class="portfolio-text-holder"></div>
 							</div>
 						</div>
