--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 							</div>
 							<div class="clear"></div>
 						</div>
-					</div>
+					</div> <hr><br>
 					<!-- end full-width div -->
 				</div>
 				<div class="clear"></div>
@@ -355,7 +355,7 @@
 							<p class="content-title">Register</p>
 						</div>
 
-						<div id="register-div" class="one_half">
+						<div id="register-div" class="one_half" style="padding-top:50px;">
 							See you on<strong> 27th November 2022</strong> on Discord
 							<div style="font-size: 1rem; padding-top: 10%">
 							</div>
