--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
 
 				<h1 class="big-title">Think. Code. Innovate.</h1>
 
-				<p class="title-desc" style="text-align: center">
-					Hybrid Mode | D-Day: 27th November 2022 | Finale: 1st & 2nd December
-					2022
+				<p style="text-align: center; color: white; font-size: 25px;">
+					Hybrid Mode | D-Day: 27th November 2022 | Finale: 1st & 2nd December 2022
 				</p>
+				<p style="text-align: center; color: white; font-size: 25px;">Registration Fee ₹0 | Goodies for all participants worth ₹50,000</p>
 				<br /><br />
-				<a href="bit.ly/th3Register" target="_blank" class="bn5"
+				<a href="#" target="_blank" class="bn5"
 					>Register Now</a
 				>
 			</div>
@@ -388,7 +388,7 @@
 								<a href="https://bit.ly/techacks3" target="_blank" class="bn5"
 									>Join Discord</a
 								>
-								<a href="bit.ly/th3Register" target="_blank" class="bn5"
+								<a href="#" target="_blank" class="bn5"
 									>Register Now</a
 								>
 							</div>
