--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 	</head>
 	<body>
 		<style></style>
-		<!-- Preloader Gif -->
-		<table class="doc-loader">
+		<!-- Preloader Gif : Infinite preloader glitch before reload -->
+                <!-- <table class="doc-loader">
 			<tr>
 				<td>
 					<div class="sign">
@@ -37,7 +37,7 @@
 					</div>
 				</td>
 			</tr>
-		</table>
+		</table> -->
 
 		<!-- Menu -->
 		<div class="menu-wrapper center-relative">
