--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
 		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 	</head>
 	<body>
-		<style></style>
-		<!-- Preloader Gif : Fix the infinite preloader glitch before reload -->
-                <table class="doc-loader">
+                <!-- <style></style>
+                <table class="doc-loader"> /Preloader
 			<tr>
 				<td>
 					<div class="sign">
@@ -37,7 +36,7 @@
 					</div>
 				</td>
 			</tr>
-		</table>
+		</table> -->
 
 		<!-- Menu -->
 		<div class="menu-wrapper center-relative">
@@ -102,7 +101,7 @@
 									<div class="service-holder">
 										<img src="images/ai.png" alt="" />
 										<div class="service-content-holder">
-											<div class="service-title">Emerging Tech</div>
+											<div class="service-title">Emerging Technology</div>
 											<div class="service-content">
 												Development using latest tech such as Artificial
 												Intelligence, Machine Learning, AR/VR,	etc.<br />
