--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 									<div class="service-holder">
 										<img src="images/ai.png" alt="" />
 										<div class="service-content-holder">
-											<div class="service-title">Emerging Technology</div>
+											<div class="service-title">Emerging Technologies</div>
 											<div class="service-content">
 												Development using latest tech such as Artificial
 												Intelligence, Machine Learning, AR/VR,	etc.<br />
