--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				</p>
 				<p style="text-align: center; color: white; font-size: 25px;">Registration Fee ₹0 | Goodies for all participants worth ₹50,000</p>
 				<br /><br />
-				<a href="#" target="_blank" class="bn5"
+				<a href="#register" target="_blank" class="bn5"
 					>Register Now</a
 				>
 			</div>
@@ -387,7 +387,7 @@
 								<a href="https://bit.ly/techacks3" target="_blank" class="bn5"
 									>Join Discord</a
 								>
-								<a href="#" target="_blank" class="bn5"
+								<a href="https://forms.office.com/r/zZk4bMUdZj" target="_blank" class="bn5"
 									>Register Now</a
 								>
 							</div>
@@ -661,6 +661,10 @@
 					<li style="color: white">
 						Chandigarh-Patiala National Highway, Rajpura, Punjab, 140401
 					</li>
+					<br><br>
+					<li><a href="https://bit.ly/th3Code" target="_blank" class="bn5"
+					>Code of Conduct</a
+				        ></li>
 					<hr />
 					<li class="social-footer">
 						<a
