--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
 						Chandigarh-Patiala National Highway, Rajpura, Punjab, 140401
 					</li>
 					<br><br>
-					<li><a href="https://bit.ly/th3Code" target="_blank" class="bn5"
+					<li><a href="https://devfolio.co/code-of-conduct" target="_blank" class="bn5"
 					>Code of Conduct</a
 				        ></li> <br><br>
 					<hr />
