--- a/index.html
+++ b/index.html
@@ -387,9 +387,10 @@
 								<a href="https://bit.ly/techacks3" target="_blank" class="bn5"
 									>Join Discord</a
 								>
-								<a href="https://forms.office.com/r/zZk4bMUdZj" target="_blank" class="bn5"
+								<a href="#" target="_blank" class="bn5"
 									>Register Now</a
 								>
+								<p style="align:center;">Applications opening soon on Devfolio platform</p>
 							</div>
 						</div>
 						<div class="clear"></div>
