--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 								<a href="#" target="_blank" class="bn5"
 									>Register Now</a
 								>
-								<p style="align:center;">Applications opening soon on Devfolio platform</p>
+								<p style="align:center;"><br><br> Starting soon on Devfolio</p>
 							</div>
 						</div>
 						<div class="clear"></div>
