--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 					<br><br><br>
 					<div class="full-width">
 						<script>
-							var team1_speed = "300";
+							var team1_speed = "700";
 							var team1_auto = "true";
 							var team1_hover = "true";
 						</script>
@@ -390,7 +390,7 @@
 								<a href="#" target="_blank" class="bn5"
 									>Register Now</a
 								>
-								<p style="align:center;"><br><br> Starting soon on Devfolio</p>
+								<p><br><br>Registration starts soon on Devfolio</p>
 							</div>
 						</div>
 						<div class="clear"></div>
