--- a/index.html
+++ b/index.html
@@ -425,9 +425,15 @@
 				</h1><br><br>
 				<div class="block content-1170 center-relative">
 				<div class="patrons">
-					<a href="https://dorahacks.io/"><img src="images/sponsors/dorahacks.png" alt="dorahacks"  style="width: 200px;"></a>
-					<a href="https://redbull.com/"><img src="images/sponsors/redbull.png" alt="redbull" style="width: 200px;"></a>
-					<a href="https://www.wolfram.com/language/"><img src="images/sponsors/wolfram-language.png" alt="wolfram-language" style="width: 200px;"></a>
+					<a href="https://www.hellenergy.com/en/"><img src="images/sponsors/devfolio.png" alt="hell" style="width: 200px;"></a>
+					<a href="https://www.echo3d.co/"><img src="images/sponsors/dorahacks.png" alt="echo-3d" style="width: 200px;"></a>
+					<a href="https://balsamiq.com/"><img src="images/sponsors/polygon.png" alt="balasmiq" style="width: 200px;"></a>
+					<a href="https://fossunited.org/"><img src="images/sponsors/redbull.png" alt="foss-united" style="width: 200px;"></a>
+				</div><br><br>
+				<div class="patrons">
+					<a href="https://dorahacks.io/"><img src="images/sponsors/solana.png" alt="dorahacks"  style="width: 200px;"></a>
+					<a href="https://redbull.com/"><img src="images/sponsors/wolfram-language.png" alt="redbull" style="width: 200px;"></a>
+					<a href="https://www.wolfram.com/language/"><img src="images/sponsors/replit.png" alt="wolfram-language" style="width: 200px;"></a>
 					<a href="https://www.taskade.com/"><img src="images/sponsors/taskade.png" alt="taskade" style="width: 200px;"></a>
 				</div><br><br>
 				<div class="patrons">
@@ -437,7 +443,7 @@
 					<a href="https://fossunited.org/"><img src="images/sponsors/foss-united.png" alt="foss-united" style="width: 200px;"></a>
 				</div><br><br>
 				<div class="patrons">
-					<a href="https://www.axure.com/"><img src="images/sponsors/axure.png" alt="axure" style="width: 200px;"></a>
+					<a href="https://www.filecoin.com/"><img src="images/sponsors/filecoin.png" alt="axure" style="width: 200px;"></a>
 					<a href="https://www.elearnmarkets.com/"><img src="images/sponsors/elearnmarkets.png" alt="elearnmarkets" style="width: 200px;"></a>
 					<a href="https://gen.xyz/"><img src="images/sponsors/gen.xyz.png" alt="gen.xyz" style="width: 200px;"></a>
 					<a href="https://1password.com/"><img src="images/sponsors/one-password.png" alt="one-password" style="width: 200px;"></a>
@@ -456,6 +462,7 @@
 					Our Patrons
 				</h1>
 				<div class="patrons">
+					<a href="https://www.axure.com/"><img src="images/sponsors/axure.png" alt="axure" style="width: 200px;"></a>
 					<img src="images/sponsors/iei-logo.png" alt="iei-india" />
 					<img src="images/sponsors/iete-logo.png" alt="iete" />
 					<img src="images/sponsors/ebuzz.png" alt="ebuzz-cu" />
