--- a/index.html
+++ b/index.html
@@ -453,20 +453,14 @@
 					<a href="https://interviewbuddy.in/"><img src="images/sponsors/interview-buddy.png" alt="interview-buddy" style="width: 200px;"></a>
 					<a href="http://www.globalcert.cloud"><img src="images/sponsors/global-cert.png" alt="global-cert" style="width: 200px;"></a>
 					<a href="http://www.globalcert.cloud"><img src="images/sponsors/colorlib.png" alt="colorib" style="width: 200px;"></a>
-
-					
 				</div><br><br>
-				<div class="clear"></div>
-				<hr>
-				<h1 style="color: white; text-align: center; padding: 5%">
-					Our Patrons
-				</h1>
 				<div class="patrons">
 					<a href="https://www.axure.com/"><img src="images/sponsors/axure.png" alt="axure" style="width: 200px;"></a>
-					<img src="images/sponsors/iei-logo.png" alt="iei-india" />
-					<img src="images/sponsors/iete-logo.png" alt="iete" />
-					<img src="images/sponsors/ebuzz.png" alt="ebuzz-cu" />
+					<a href="https://www.ieindia.org"><img src="images/sponsors/iei-logo.png" alt="iei-india" /></a>
+					<a href="https://www.iete.org/"><img src="images/sponsors/iete-logo.png" alt="iete" /></a>
+					<a href="https://www.instagram.com/ebuzz_club/"><img src="images/sponsors/ebuzz.png" alt="ebuzz-cu" /></a>
 				</div>
+					<div class="clear"></div>
 				</div>
 			</div>
 
