--- a/index.html
+++ b/index.html
@@ -420,45 +420,45 @@
 		</div>
 
 			<div id="sponsors" class="section extra-content-full-width">
-				<h1 style="color: white; text-align: center;">
-					Our Sponsors
-				</h1><br><br>
 				<div class="block content-1170 center-relative">
 				<div class="patrons">
-					<a href="https://www.hellenergy.com/en/"><img src="images/sponsors/devfolio.png" alt="hell" style="width: 200px;"></a>
-					<a href="https://www.echo3d.co/"><img src="images/sponsors/dorahacks.png" alt="echo-3d" style="width: 200px;"></a>
-					<a href="https://balsamiq.com/"><img src="images/sponsors/polygon.png" alt="balasmiq" style="width: 200px;"></a>
-					<a href="https://fossunited.org/"><img src="images/sponsors/redbull.png" alt="foss-united" style="width: 200px;"></a>
+					<a href="https://devfolio.co/"><img src="images/sponsors/devfolio.png" alt="devfolio" style="width: 200px;"></a>
+					<a href="https://dorahacks.io/"><img src="images/sponsors/dorahacks.png" alt="dorahacks" style="width: 200px;"></a>
+					<a href="https://redbull.com/"><img src="images/sponsors/redbull.png" alt="redbull" style="width: 200px;"></a>
+					<a href="https://taskade.com/"><img src="images/sponsors/taskade.png" alt="taskade" style="width: 200px;"></a>
 				</div><br><br>
 				<div class="patrons">
-					<a href="https://dorahacks.io/"><img src="images/sponsors/solana.png" alt="dorahacks"  style="width: 200px;"></a>
-					<a href="https://redbull.com/"><img src="images/sponsors/wolfram-language.png" alt="redbull" style="width: 200px;"></a>
-					<a href="https://www.wolfram.com/language/"><img src="images/sponsors/replit.png" alt="wolfram-language" style="width: 200px;"></a>
-					<a href="https://www.taskade.com/"><img src="images/sponsors/taskade.png" alt="taskade" style="width: 200px;"></a>
+					<a href="https://polygon.technology/"><img src="images/sponsors/polygon.png" alt="dorahacks"  style="width: 200px;"></a>
+					<a href="https://www.wolfram.com/language/"><img src="images/sponsors/wolfram-language.png" alt="wolfram-language" style="width: 200px;"></a>
+					<a href="https://www.stickermule.com/"><img src="images/sponsors/stickermule.png" alt="stickermule" style="width: 200px;"></a>
+					<a href="https://www.hellenergy.com/en/"><img src="images/sponsors/hellenergy.png" alt="hell-energy" style="width: 200px;"></a>
 				</div><br><br>
 				<div class="patrons">
-					<a href="https://www.hellenergy.com/en/"><img src="images/sponsors/hellenergy.png" alt="hell" style="width: 200px;"></a>
+					<a href="https://www.solana.com/"><img src="images/sponsors/solana.png" alt="solana" style="width: 200px;"></a>
 					<a href="https://www.echo3d.co/"><img src="images/sponsors/echo-3d.png" alt="echo-3d" style="width: 200px;"></a>
 					<a href="https://balsamiq.com/"><img src="images/sponsors/balasmiq.png" alt="balasmiq" style="width: 200px;"></a>
 					<a href="https://fossunited.org/"><img src="images/sponsors/foss-united.png" alt="foss-united" style="width: 200px;"></a>
 				</div><br><br>
 				<div class="patrons">
-					<a href="https://www.filecoin.com/"><img src="images/sponsors/filecoin.png" alt="axure" style="width: 200px;"></a>
+					<a href="https://www.filecoin.com/"><img src="images/sponsors/filecoin.png" alt="filecoin" style="width: 200px;"></a>
 					<a href="https://www.elearnmarkets.com/"><img src="images/sponsors/elearnmarkets.png" alt="elearnmarkets" style="width: 200px;"></a>
 					<a href="https://gen.xyz/"><img src="images/sponsors/gen.xyz.png" alt="gen.xyz" style="width: 200px;"></a>
 					<a href="https://1password.com/"><img src="images/sponsors/one-password.png" alt="one-password" style="width: 200px;"></a>
 				</div><br><br>
 				<div class="patrons">
-					<a href="https://www.stickermule.com/"><img src="images/sponsors/stickermule.png" alt="stickermule" style="width: 200px;"></a>
+					<a href="https://www.replit.com/"><img src="images/sponsors/replit.png" alt="replit" style="width: 200px;"></a>
 					<a href="https://interviewbuddy.in/"><img src="images/sponsors/interview-buddy.png" alt="interview-buddy" style="width: 200px;"></a>
 					<a href="http://www.globalcert.cloud"><img src="images/sponsors/global-cert.png" alt="global-cert" style="width: 200px;"></a>
-					<a href="http://www.globalcert.cloud"><img src="images/sponsors/colorlib.png" alt="colorib" style="width: 200px;"></a>
+					<a href="https://www.axure.com/"><img src="images/sponsors/axure.png" alt="axure" style="width: 200px;" /></a>
 				</div><br><br>
+					<hr>
+					<h1> Our Patrons</h1>
+					<br>
 				<div class="patrons">
-					<a href="https://www.axure.com/"><img src="images/sponsors/axure.png" alt="axure" style="width: 200px;"></a>
-					<a href="https://www.ieindia.org"><img src="images/sponsors/iei-logo.png" alt="iei-india" /></a>
-					<a href="https://www.iete.org/"><img src="images/sponsors/iete-logo.png" alt="iete" /></a>
-					<a href="https://www.instagram.com/ebuzz_club/"><img src="images/sponsors/ebuzz.png" alt="ebuzz-cu" /></a>
+					<a href="https://www.ieindia.org"><img src="images/sponsors/iei-logo.png" alt="iei-india" style="width: 200px;" /></a>
+					<a href="https://www.iete.org/"><img src="images/sponsors/iete-logo.png" alt="iete" style="width: 200px;" /></a>
+					<a href="https://www.instagram.com/ebuzz_club/"><img src="images/sponsors/ebuzz.png" alt="ebuzz-cu" style="width: 200px;" /></a>
+					<a href="http://www.colorib.com"><img src="images/sponsors/colorlib.png" alt="colorib" style="width: 200px;"></a>
 				</div>
 					<div class="clear"></div>
 				</div>
