--- a/index.html
+++ b/index.html
@@ -420,7 +420,12 @@
 		</div>
 
 			<div id="sponsors" class="section extra-content-full-width">
+				
 				<div class="block content-1170 center-relative">
+					<hr>
+				<h1 style="color: white; text-align: center; padding: 5%">
+					Our Sponsors
+				</h1>
 				<div class="patrons">
 					<a href="https://devfolio.co/"><img src="images/sponsors/devfolio.png" alt="devfolio" style="width: 200px;"></a>
 					<a href="https://dorahacks.io/"><img src="images/sponsors/dorahacks.png" alt="dorahacks" style="width: 200px;"></a>
@@ -452,8 +457,9 @@
 					<a href="https://www.axure.com/"><img src="images/sponsors/axure.png" alt="axure" style="width: 200px;" /></a>
 				</div><br><br>
 					<hr>
-					<h1> Our Patrons</h1>
-					<br>
+				<h1 style="color: white; text-align: center; padding: 5%">
+					Our Patrons
+				</h1>
 				<div class="patrons">
 					<a href="https://www.ieindia.org"><img src="images/sponsors/iei-logo.png" alt="iei-india" style="width: 200px;" /></a>
 					<a href="https://www.iete.org/"><img src="images/sponsors/iete-logo.png" alt="iete" style="width: 200px;" /></a>
