--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 				</div><br><br>
 					<hr>
 				<h1 style="color: white; text-align: center; padding: 5%">
-					Our Patrons
+					Community Partners
 				</h1>
 				<div class="patrons">
 					<a href="https://www.ieindia.org"><img src="images/sponsors/iei-logo.png" alt="iei-india" style="width: 200px;" /></a>
