--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 											<div class="service-title">Emerging Technologies</div>
 											<div class="service-content">
 												Development using latest tech such as Artificial
-												Intelligence, Machine Learning, AR/VR,	etc.<br />
+												Intelligence, Machine Learning, AR/VR, etc.<br />
 											</div>
 										</div>
 									</div>
@@ -113,7 +113,7 @@
 										<div class="service-content-holder">
 											<div class="service-title">Web 3.0</div>
 											<div class="service-content">
-												Development of solutions on decentralization platforms
+												Development of solutions on decentralized platforms
 												such as blockchains, cryptocurrencies, and NFTs.<br />
 											</div>
 										</div>
@@ -133,7 +133,7 @@
 										<div class="service-content-holder">
 											<div class="service-title">Open Innovation</div>
 											<div class="service-content">
-												Solutions designed based on Ed-Tech, Fin-Tech,
+												Solutions designed based on Ed-Tech, Fin-Tech, Healthcare
 												Agri-Tech, Green-Tech, Smart City, Smart Home, etc.
 
 												<br />
