--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 										<div class="service-content-holder">
 											<div class="service-title">Open Innovation</div>
 											<div class="service-content">
-												Solutions designed based on Ed-Tech, Fin-Tech, Healthcare
+												Solutions designed based on Ed-Tech, Fin-Tech, Healthcare,
 												Agri-Tech, Green-Tech, Smart City, Smart Home, etc.
 
 												<br />
