--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 								Department of Electronics and Communication Engineering with 110
 								participants and expanded to 350 participants in 2020. TecHacks
 								3.0, as a hybrid event, will give participants from various
-								technical backgrounds with the opportunity to engage with a
+								technical backgrounds the opportunity to engage with a
 								wonderful community of hackers while also providing seminars and
 								mentorship from industry leaders.
 							</div>
