--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 								University in Punjab, was founded in 2019 by the
 								Department of Electronics and Communication Engineering with 110
 								participants and expanded to 350 participants in 2020. TecHacks
-								3.0, as a hybrid event, will give participants from various
+								3.0, as a hybrid <b>Open-source</b> hackathon, will give participants from various
 								technical backgrounds the opportunity to engage with a
 								wonderful community of hackers while also providing seminars and
 								mentorship from industry leaders.
