--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
 					Prime Sponsors
 				</h1>
 				<div class="patrons">
-					<a href="https://devfolio.co/"><img src="https://github.com/devfolioco/brand-assets/blob/f523906e2faeabd9e9f12d4ba62f53aa5b45b385/Logo%20+%20Text%20-%20White/Devfolio%20-%20White@3x.png" alt="devfolio" style="width: 200px;"></a>
+					<a href="https://devfolio.co/"><img src="images/sponsors/devfolio.png" alt="devfolio" style="width: 200px;"></a>
 					<a href="https://polygon.technology/"><img src="images/sponsors/polygon.png" alt="polygon"  style="width: 200px;"></a>
 					<a href="https://redbull.com/"><img src="images/sponsors/redbull.png" alt="redbull" style="width: 200px;"></a>
 					<a href="https://taskade.com/"><img src="images/sponsors/taskade.png" alt="taskade" style="width: 200px;"></a>
