--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<!-- Home -->
 		<div id="home" class="section intro-page">
 			<div class="block content-1170 center-relative center-text">
-				<img class="top-logo" src="images/logo-primary.png" alt="Boxus" style="padding-top:90px;"/>
+				<img class="top-logo" src="images/logo-primary.png" alt="Boxus" style="padding-top:90px; padding-bottohn=30px;"/>
 				<br />
 
 				<h1 class="big-title">Think. Code. Innovate.</h1>
