--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<!-- Home -->
 		<div id="home" class="section intro-page">
 			<div class="block content-1170 center-relative center-text">
-				<img class="top-logo" src="images/logo-primary.png" alt="Boxus" style="padding-top:90px; padding-bottohn=30px;"/>
+				<img class="top-logo" src="images/logo-primary.png" alt="Boxus" style="width:250px; height:auto;"/>
 				<br />
 
 				<h1 class="big-title">Think. Code. Innovate.</h1>
@@ -430,9 +430,13 @@
 					<a href="https://devfolio.co/"><img src="images/sponsors/devfolio.png" alt="devfolio" style="width: 200px;"></a>
 					<a href="https://polygon.technology/"><img src="images/sponsors/polygon.png" alt="polygon"  style="width: 200px;"></a>
 					<a href="https://redbull.com/"><img src="images/sponsors/redbull.png" alt="redbull" style="width: 200px;"></a>
-					<a href="https://taskade.com/"><img src="images/sponsors/taskade.png" alt="taskade" style="width: 200px;"></a>
 				</div><br><br>
+					<hr>
+				<h1 style="color: white; text-align: center; padding: 5%">
+					Gold Sponsors
+				</h1>
 				<div class="patrons">
+					<a href="https://taskade.com/"><img src="images/sponsors/taskade.png" alt="taskade" style="width: 200px;"></a>
 					<a href="https://www.wolfram.com/language/"><img src="images/sponsors/wolfram-language.png" alt="wolfram-language" style="width: 200px;"></a>
 					<a href="https://www.stickermule.com/"><img src="images/sponsors/stickermule.png" alt="stickermule" style="width: 200px;"></a>
 					<a href="https://www.hellenergy.com/en/"><img src="images/sponsors/hellenergy.png" alt="hell-energy" style="width: 200px;"></a>
@@ -443,6 +447,10 @@
 					<a href="https://balsamiq.com/"><img src="images/sponsors/balasmiq.png" alt="balasmiq" style="width: 200px;"></a>
 					<a href="https://fossunited.org/"><img src="images/sponsors/foss-united.png" alt="foss-united" style="width: 200px;"></a>
 				</div><br><br>
+					<hr>
+				<h1 style="color: white; text-align: center; padding: 5%">
+					Silver Sponsors
+				</h1>
 				<div class="patrons">
 					<a href="https://www.filecoin.com/"><img src="images/sponsors/filecoin.png" alt="filecoin" style="width: 200px;"></a>
 					<a href="https://www.elearnmarkets.com/"><img src="images/sponsors/elearnmarkets.png" alt="elearnmarkets" style="width: 200px;"></a>
