--- a/index.html
+++ b/index.html
@@ -429,31 +429,31 @@
 				<div class="patrons">
 					<a href="https://devfolio.co/"><img src="images/sponsors/devfolio.png" alt="devfolio" style="width: 200px;"></a>
 					<a href="https://polygon.technology/"><img src="images/sponsors/polygon.png" alt="polygon"  style="width: 200px;"></a>
-					<a href="https://redbull.com/"><img src="images/sponsors/redbull.png" alt="redbull" style="width: 200px;"></a>
+					<a href="https://redbull.com/"><img src="images/sponsors/redbull.png" alt="redbull" style="width: 150px;"></a>
 				</div><br><br>
 					<hr>
 				<h1 style="color: white; text-align: center; padding: 5%">
 					Gold Sponsors
 				</h1>
 				<div class="patrons">
-					<a href="https://taskade.com/"><img src="images/sponsors/taskade.png" alt="taskade" style="width: 200px;"></a>
+					<a href="https://www.elearnmarkets.com/"><img src="images/sponsors/elearnmarkets.png" alt="elearnmarkets" style="width: 200px;"></a>
 					<a href="https://www.wolfram.com/language/"><img src="images/sponsors/wolfram-language.png" alt="wolfram-language" style="width: 200px;"></a>
 					<a href="https://www.stickermule.com/"><img src="images/sponsors/stickermule.png" alt="stickermule" style="width: 200px;"></a>
 					<a href="https://www.hellenergy.com/en/"><img src="images/sponsors/hellenergy.png" alt="hell-energy" style="width: 200px;"></a>
 				</div><br><br>
-				<div class="patrons">
-					<a href="https://www.solana.com/"><img src="images/sponsors/solana.png" alt="solana" style="width: 200px;"></a>
-					<a href="https://www.echo3d.co/"><img src="images/sponsors/echo-3d.png" alt="echo-3d" style="width: 200px;"></a>
-					<a href="https://balsamiq.com/"><img src="images/sponsors/balasmiq.png" alt="balasmiq" style="width: 200px;"></a>
-					<a href="https://fossunited.org/"><img src="images/sponsors/foss-united.png" alt="foss-united" style="width: 200px;"></a>
-				</div><br><br>
-					<hr>
+						<hr>
 				<h1 style="color: white; text-align: center; padding: 5%">
 					Silver Sponsors
 				</h1>
 				<div class="patrons">
+					<a href="https://www.solana.com/"><img src="images/sponsors/solana.png" alt="solana" style="width: 200px;"></a>
+					<a href="https://www.echo3d.co/"><img src="images/sponsors/echo-3d.png" alt="echo-3d" style="width: 200px;"></a>
+					<a href="https://balsamiq.com/"><img src="images/sponsors/balasmiq.png" alt="balasmiq" style="width: 200px;"></a>
+					<a href="https://fossunited.org/"><img src="images/sponsors/foss-united.png" alt="foss-united" style="width: 150px;"></a>
+				</div><br><br>
+				<div class="patrons">
+					<!-- <a href="https://taskade.com/"><img src="images/sponsors/taskade.png" alt="taskade" style="width: 150px;"></a> -->
 					<a href="https://www.filecoin.com/"><img src="images/sponsors/filecoin.png" alt="filecoin" style="width: 200px;"></a>
-					<a href="https://www.elearnmarkets.com/"><img src="images/sponsors/elearnmarkets.png" alt="elearnmarkets" style="width: 200px;"></a>
 					<a href="https://gen.xyz/"><img src="images/sponsors/gen.xyz.png" alt="gen.xyz" style="width: 200px;"></a>
 					<a href="https://1password.com/"><img src="images/sponsors/one-password.png" alt="one-password" style="width: 200px;"></a>
 				</div><br><br>
