--- a/index.html
+++ b/index.html
@@ -436,42 +436,42 @@
 					Gold Sponsors
 				</h1>
 				<div class="patrons">
-					<a href="https://www.elearnmarkets.com/"><img src="images/sponsors/elearnmarkets.png" alt="elearnmarkets" style="width: 200px;"></a>
-					<a href="https://www.stickermule.com/"><img src="images/sponsors/stickermule.png" alt="stickermule" style="width: 200px;"></a>
-					<a href="https://fossunited.org/"><img src="images/sponsors/foss-united.png" alt="foss-united" style="width: 150px;"></a>
-					<a href="https://www.hellenergy.com/en/"><img src="images/sponsors/hellenergy.png" alt="hell-energy" style="width: 200px;"></a>
+					<a href="https://www.elearnmarkets.com/" target="_blank"><img src="images/sponsors/elearnmarkets.png" alt="elearnmarkets" style="width: 200px;"></a>
+					<a href="https://www.stickermule.com/" target="_blank"><img src="images/sponsors/stickermule.png" alt="stickermule" style="width: 200px;"></a>
+					<a href="https://fossunited.org/" target="_blank"><img src="images/sponsors/foss-united.png" alt="foss-united" style="width: 150px;"></a>
+					<a href="https://www.hellenergy.com/en/" target="_blank"><img src="images/sponsors/hellenergy.png" alt="hell-energy" style="width: 200px;"></a>
 				</div><br><br>
 						<hr>
 				<h1 style="color: white; text-align: center; padding: 5%">
 					Silver Sponsors
 				</h1>
 				<div class="patrons">
-					<a href="https://www.solana.com/"><img src="images/sponsors/solana.png" alt="solana" style="width: 200px;"></a>
+					<a href="https://www.solana.com/" target="_blank"><img src="images/sponsors/solana.png" alt="solana" style="width: 200px;"></a>
 					<a href="https://www.echo3d.co/"><img src="images/sponsors/echo-3d.png" alt="echo-3d" style="width: 200px;"></a>
 					<a href="https://balsamiq.com/"><img src="images/sponsors/balasmiq.png" alt="balasmiq" style="width: 200px;"></a>
 					<a href="https://www.wolfram.com/language/"><img src="images/sponsors/wolfram-language.png" alt="wolfram-language" style="width: 200px;"></a>
 				</div><br><br>
 				<div class="patrons">
+					<a href="http://www.colorib.com" target="_blank"><img src="images/sponsors/colorlib.png" alt="colorib" style="width: 200px;"></a>
 					<!-- <a href="https://taskade.com/"><img src="images/sponsors/taskade.png" alt="taskade" style="width: 150px;"></a> -->
-					<a href="https://www.filecoin.com/"><img src="images/sponsors/filecoin.png" alt="filecoin" style="width: 200px;"></a>
-					<a href="https://gen.xyz/"><img src="images/sponsors/gen.xyz.png" alt="gen.xyz" style="width: 200px;"></a>
-					<a href="https://1password.com/"><img src="images/sponsors/one-password.png" alt="one-password" style="width: 200px;"></a>
+					<a href="https://www.filecoin.com/" target="_blank"><img src="images/sponsors/filecoin.png" alt="filecoin" style="width: 200px;"></a>
+					<a href="https://gen.xyz/" target="_blank"><img src="images/sponsors/gen.xyz.png" alt="gen.xyz" style="width: 200px;"></a>
+					<a href="https://1password.com/" target="_blank"><img src="images/sponsors/one-password.png" alt="one-password" style="width: 200px;"></a>
 				</div><br><br>
 				<div class="patrons">
-					<a href="https://www.replit.com/"><img src="images/sponsors/replit.png" alt="replit" style="width: 200px;"></a>
-					<a href="https://interviewbuddy.in/"><img src="images/sponsors/interview-buddy.png" alt="interview-buddy" style="width: 200px;"></a>
-					<a href="http://www.globalcert.cloud"><img src="images/sponsors/global-cert.png" alt="global-cert" style="width: 200px;"></a>
-					<a href="https://www.axure.com/"><img src="images/sponsors/axure.png" alt="axure" style="width: 200px;" /></a>
+					<a href="https://www.replit.com/" target="_blank"><img src="images/sponsors/replit.png" alt="replit" style="width: 200px;"></a>
+					<a href="https://interviewbuddy.in/" target="_blank"><img src="images/sponsors/interview-buddy.png" alt="interview-buddy" style="width: 200px;"></a>
+					<a href="http://www.globalcert.cloud" target="_blank"><img src="images/sponsors/global-cert.png" alt="global-cert" style="width: 200px;"></a>
+					<a href="https://www.axure.com/" target="_blank"><img src="images/sponsors/axure.png" alt="axure" style="width: 200px;" /></a>
 				</div><br><br>
 					<hr>
 				<h1 style="color: white; text-align: center; padding: 5%">
 					Community Partners
 				</h1>
 				<div class="patrons">
-					<a href="https://www.ieindia.org"><img src="images/sponsors/iei-logo.png" alt="iei-india" style="width: 200px;" /></a>
-					<a href="https://www.iete.org/"><img src="images/sponsors/iete-logo.png" alt="iete" style="width: 200px;" /></a>
-					<a href="https://www.instagram.com/ebuzz_club/"><img src="images/sponsors/ebuzz.png" alt="ebuzz-cu" style="width: 200px;" /></a>
-					<a href="http://www.colorib.com"><img src="images/sponsors/colorlib.png" alt="colorib" style="width: 200px;"></a>
+					<a href="https://www.ieindia.org" target="_blank"><img src="images/sponsors/iei-logo.png" alt="iei-india" style="width: 200px;" /></a>
+					<a href="https://www.iete.org/" target="_blank"><img src="images/sponsors/iete-logo.png" alt="iete" style="width: 200px;" /></a>
+					<a href="https://www.instagram.com/ebuzz_club/" target="_blank"><img src="images/sponsors/ebuzz.png" alt="ebuzz-cu" style="width: 200px;" /></a>
 				</div>
 					<div class="clear"></div>
 				</div>
