--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 				<div class="section-content-holder right">
 					<div class="content-wrapper">
 						<div class="content-title-holder">
-							<p class="content-title">Register</p>
+							<p class="content-title" style="font-family:montserrat;">Register</p>
 						</div>
 
 						<div id="register-div" class="one_half" style="padding-top:50px;">
@@ -387,10 +387,9 @@
 								<a href="https://bit.ly/techacks3" target="_blank" class="bn5"
 									>Join Discord</a
 								>
-								<a href="#" target="_blank" class="bn5"
-									>Register Now</a
+								<a href="https://techacks.devfolio.co/" target="_blank" class="bn5"
+									><img src="images/devfolio-icon.png" alt="devfolio" style="height:14px;"> Register now</a
 								>
-								<p><br><br>Registration starts soon on Devfolio</p>
 							</div>
 						</div>
 						<div class="clear"></div>
@@ -422,6 +421,9 @@
 			<div id="sponsors" class="section extra-content-full-width">
 				
 				<div class="block content-1170 center-relative">
+					<h1 style="color: white; text-align: center; font-size:44px; padding: 5%">
+					OUR SPONSORS
+				</h1>
 					<hr>
 				<h1 style="color: white; text-align: center; padding: 5%">
 					Prime Sponsors
