--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 									>Join Discord</a
 								>
 								<a href="https://techacks.devfolio.co/" target="_blank" class="bn5"
-									><img src="images/devfolio-icon.png" alt="devfolio" style="height:14px;"> Register now</a
+									><img src="images/devfolio.png" alt="devfolio" style="height:14px;"> Register now</a
 								>
 							</div>
 						</div>
